syntax = "proto3";

package Nebula.Services.Fragments.Inventory;
import "google/api/annotations.proto";
import "Protos/Nebula/Services/Fragments/Inventory/LocationRecord.proto";

service LocationInterface {
	rpc CreateLocation (CreateLocationRequest) returns (CreateLocationResponse) {
	option (google.api.http) = {
	  post: "/api/v1/inventory/{OrganizationId}/locations"
	  body: "*"
	};
  }
  rpc ListLocations (ListLocationsRequest) returns (ListLocationsResponse) {
	option (google.api.http) = {
	  get: "/api/v1/inventory/{OrganizationId}/locations"
	};
  }
}

message CreateLocationRequest {
	string OrganizationId = 1;
	string Name = 2;
	Nebula.Services.Fragments.Inventory.InventoryLocationType Type = 3;
	string Address = 4;
}

message CreateLocationResponse {
	string Error = 1;
	Nebula.Services.Fragments.Inventory.LocationRecord Record = 2;
}

message ListLocationsRequest {
	string OrganizationId = 1;
}

message ListLocationsResponse {
	string Error = 1;
	repeated Nebula.Services.Fragments.Inventory.LocationRecord Records = 2;
}