syntax = "proto3";

package Nebula.Services.Fragments.Inventory;
import "google/protobuf/timestamp.proto";

enum InventoryLocationType {
	InventoryLocationWarehouse = 0;
	InventoryLocationRetail = 1;
	InventoryLocationBin = 2;
}

message LocationRecord {
	string LocationId = 1;
	string OrganizationId = 2;
	string Name = 3;
	InventoryLocationType Type = 4;
	string Address = 6;

	google.protobuf.Timestamp CreatedUTC = 30;
	string CreatedBy = 31;
	google.protobuf.Timestamp LastModifiedUTC = 32;
	string LastModifiedBy = 33;
}